# therapeia

./: Cargo.toml  devenv.yaml  secrets.yaml
backend/crates/appointment_service/src/infra/: http.rs
backend/crates/auth_service/: Cargo.toml
backend/crates/auth_service/src/: handlers.rs  lib.rs  models.rs
backend/crates/diagnosis_service/: Cargo.toml
backend/crates/diagnosis_service/src/: lib.rs
backend/crates/prescription_service/: Cargo.toml
backend/crates/prescription_service/src/: lib.rs
backend/crates/profile_service/: Cargo.toml
backend/crates/profile_service/src/: handlers.rs  lib.rs  models.rs
frontend/lib/: api_service.dart  login_page.dart  register_page.dart
frontend/lib/doctor/: add_edit_medicine_page.dart  appointments_page_doctor.dart  consultation_request_page.dart  dispense_medicine_page.dart  doctor_personal_info_page.dart  landing_page_doctor.dart  medical_examination_history_page.dart  patient_details_page.dart
frontend/lib/doctor/models/: doctor_models.dart
frontend/lib/patient/: appointments_page_patient.dart  information_page_patient.dart  landing_page_patient.dart
