[package]
name = "diagnosis_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time"] }
time = { version = "0.3.44", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde"] }
